# uvke

./: .gitignore  CMakeLists.txt  LICENSE  README.md  TODO  vcpkg.json
.cache/clangd/index/: App.cpp.BD8241A2B445CE41.idx  Clock.cpp.74E84A96C53FB156.idx  Clock.hpp.B3AB373F4DB7E87C.idx  Logger.cpp.6C64ED5C7857B301.idx  Logger.hpp.1F74BE209B1DF578.idx  Platform.cpp.8E3340C7C29F43C3.idx  Platform.hpp.482E04BB19FCFB3D.idx  Renderer.cpp.56655155070B92E9.idx  Renderer.hpp.3B71B7CAC82B5F5C.idx  Vec2.hpp.6B05BB954C8A56A9.idx  Vec3.hpp.BB8E3A650D0945A7.idx  Vec4.hpp.68CC7137AD54A41C.idx  Window.cpp.D0899DA1A168BD98.idx  Window.hpp.518E401E69D962B6.idx  stb_image.h.C0FD54D2E0B40DAC.idx  uvke.cpp.2733A6B3BE5048D7.idx  uvke.hpp.760014A1E14C0B55.idx  uvkepch.cpp.FB87CB6C4D952B97.idx  uvkepch.hpp.B6CBCC7491147CDE.idx
Examples/App/: App.cpp  CMakeLists.txt  ExampleApp.cpp
Examples/Example/: CMakeLists.txt  Example.cpp
Examples/ExampleApp/: CMakeLists.txt  ExampleApp.cpp
Examples/Image/: CMakeLists.txt  Image.cpp
Examples/Mesh/: CMakeLists.txt  Mesh.cpp
Examples/Test/: CMakeLists.txt  Test.cpp
Examples/Windows/: CMakeLists.txt  Windows.cpp
Resource/: Default.frag  Default.frag.spv  Default.vert  Default.vert.spv  Shader.frag.spv  Shader.vert  Shader.vert.spv
Resource/Shaders/: CMakeLists.txt  Default.frag  Default.frag.spv  Default.vert  Default.vert.spv  Lightless.frag  Lightless.vert  Rendering.frag  Rendering.vert
Resource/Shaders/Compiled/: Lightless.frag.spv  Lightless.vert.spv  Rendering.frag.spv  Rendering.vert.spv
Resource/Shaders/Source/: Lightless.frag  Rendering.frag
Source/uvke/: uvke.cpp  uvke.hpp  uvkepch.cpp  uvkepch.hpp
Source/uvke/Audio/: AudioManager.cpp  AudioManager.hpp  CMakeLists.txt
Source/uvke/Core/: App.cpp  App.hpp  Base.cpp  Base.hpp  CMakeLists.txt  Core.cpp  Core.hpp  Entry.hpp  Event.cpp  Helper.cpp  Helper.hpp  Logger.cpp  Logger.hpp  Platform.cpp  Platform.hpp  Window.cpp  Window.hpp  WindowManager.cpp  WindowManager.hpp
Source/uvke/Graphics/: CMakeLists.txt  Camera.cpp  Camera.hpp  CommandBuffer.cpp  CommandBuffer.hpp  Component.hpp  DepthBuffer.cpp  DepthBuffer.hpp  Descriptor.cpp  Descriptor.hpp  Framebuffer.cpp  Framebuffer.hpp  Image.cpp  Image.hpp  IndexBuffer.cpp  IndexBuffer.hpp  Interface.cpp  Interface.hpp  Mesh.cpp  Mesh.hpp  Pipeline.cpp  Pipeline.hpp  Presentation.cpp  Presentation.hpp  Renderable.hpp  RenderableComponent.hpp  Renderer.cpp  Renderer.hpp  Sampler.cpp  Sampler.hpp  Shader.cpp  Shader.hpp  Sprite.cpp  Sprite.hpp  StagingBuffer.cpp  StagingBuffer.hpp  Surface.cpp  Surface.hpp  Swapchain.cpp  Swapchain.hpp  (+8 more)
Source/uvke/Utils/: CMakeLists.txt  Clock.cpp  Clock.hpp  File.cpp  File.hpp  Mat4x4.hpp  MeshLoader.cpp  MeshLoader.hpp  Quaternion.hpp  Random.cpp  Random.hpp  Utils.hpp  Vec2.hpp  Vec3.hpp  Vec4.hpp
Source/uvke/Window/: CMakeLists.txt  Event.cpp  Event.hpp  Keys.hpp  Window.cpp  Window.hpp  WindowManager.cpp  WindowManager.hpp
